--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,267 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<!DOCTYPE html>
+<html lang="en">
+    <body>
+        <div class="navigation">
+            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+            <label for="navi-toggle" class="navigation__button">
+                <span class="navigation__icon">&nbsp;</span>
+            </label>
+
+            <div class="navigation__background">&nbsp;</div>
+
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>Sobre NUPEL</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Artigos disponíveis</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Aulas Online</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Divulgue seu artigo</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Escreva seu texto</a></li>
+                    </ul>
+            </nav>
+        </div>
+
+        <header class="header u-margin-bottom-medium">
+            <div class="header__logo-box">
+                <img src="https://i.ibb.co/Jms0C93/shutterstock-695734858-2.png" alt="Logo" class="header__logo">
+            </div>
+
+            <div class="header__text-box">
+                <h1 class="heading-primary">
+                    <span class="heading-primary--main">Plataforma NUPEL</span>
+                    <span class="heading-primary--sub">Pesquisa, Nutrição e inovação</span>
+                </h1>
+
+                <a href="#section-tours" class="btn btn--white btn--animated">Conheça mais</a>
+            </div>
+        </header>
+
+        <main>
+            <section class="section-about u-margin-bottom-big">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Aulas Online com professores renomados
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="heading-tertiary u-margin-bottom-small">Professores de grandes universidades brasileiras</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
+                            ducimus quam nisi exercitationem omnis earum qui.
+                        </p>
+
+                        <h3 class="heading-tertiary u-margin-bottom-small">Excelentes métodos de ensino </h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nulla deserunt voluptatum nam.
+                        </p>
+
+                        <a href="#" class="btn-text">Descubra &rarr;</a>
+                    </div>
+                    <div class="col-1-of-2">
+                        <div class="composition">
+
+                            <img srcset="https://i.ibb.co/d2bRvmv/Cloves.jpg 300w, https://i.ibb.co/d2bRvmv/Cloves.jpg 1000w"
+                                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                                 alt="Photo 1"
+                                 class="composition__photo composition__photo--p1"
+                                 src="https://i.ibb.co/d2bRvmv/Cloves.jpg">
+
+                            <img srcset="https://i.ibb.co/6YTh8RQ/Julio.jpg 300w, https://i.ibb.co/6YTh8RQ/Julio.jpg 1000w"
+                                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                                 alt="Photo 2"
+                                 class="composition__photo composition__photo--p2"
+                                 src="https://i.ibb.co/6YTh8RQ/Julio.jpg">
+
+                            <img srcset="https://i.ibb.co/g4cfBPw/Alexandre.jpg 300w, https://i.ibb.co/g4cfBPw/Alexandre.jpg 1000w"
+                                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                                 alt="Photo 3"
+                                 class="composition__photo composition__photo--p3"
+                                 src="https://i.ibb.co/g4cfBPw/Alexandre.jpg">
+
+                            <img srcset="https://i.ibb.co/SrCczM4/Geraldo-1.jpg 300w, https://i.ibb.co/SrCczM4/Geraldo-1.jpg 1000w"
+                                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                                 alt="Photo 4"
+                                 class="composition__photo composition__photo--p4"
+                                 src="https://i.ibb.co/SrCczM4/Geraldo-1.jpg">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-tours u-margin-bottom-big" id="section-tours">
+                <div class="u-center-text u-margin-bottom-medium">
+                    <h2 class="heading-secondary">
+                        Cursos mais procurados
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-of-3">
+                       <div class="card">
+                           <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--1">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--1">Manejo de bezerros</span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>Cuidados iniciais</li>
+                                        <li>Aleitamento</li>
+                                        <li>Periodo do periparto</li>
+                                        <li>Manejo das novilhas</li>
+                                        <li>Dificuldade: iniciante</li>
+                                    </ul>
+                                </div>
+                           </div>
+                           <div class="card__side card__side--back card__side--back-1">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Somente</p>
+                                        <p class="card__price-value">R$150,00</p>
+                                    </div>
+                                    <a href="#popup" class="btn btn--white">Vagas limitadas!</a>
+                                </div>
+                            </div>
+                       </div>
+                    </div>
+
+
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--2">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--2">Nutrição de ruminantes</span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>Fisiologia do aparelho digestivo</li>
+                                        <li>Bioquimica da digestão</li>
+                                        <li>Alimentos recomendados</li>
+                                        <li>Càlculo de ração</li>
+                                        <li>Dificuldade: intermediário</li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                            <div class="card__side card__side--back card__side--back-2">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Somente</p>
+                                        <p class="card__price-value">R$299,99</p>
+                                    </div>
+                                    <a href="#popup" class="btn btn--white">Vagas limitadas!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--3">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--3">Reprodução de vacas Leiteras</span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>Hormônios</li>
+                                        <li>Cuidados com as primipáras</li>
+                                        <li>IATF</li>
+                                        <li>Escolha do Semem</li>
+                                        <li>Dificuldade: Avançado</li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                            <div class="card__side card__side--back card__side--back-3">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Somente</p>
+                                        <p class="card__price-value">R$ 250,00</p>
+                                    </div>
+                                    <a href="#popup" class="btn btn--white">Vagas limitadas!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn btn--white">Descubra todos cursos</a>
+                </div>
+            </section>
+
+                <div class="u-center-text u-margin-bottom-medium">
+                    <h2 class="heading-secondary">
+                        Avaliação de quem já fez o curso
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="https://i.ibb.co/DYrvNFY/ely.jpg" alt="Person on a tour" class="story__img">
+                            <figcaption class="story__caption">Ely Mitie Massuda</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">Melhor curso que já fiz na vida!</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
+                                ducimus quam nisi exercitationem omnis earum qui. Aperiam, ipsum sapiente aspernatur libero
+                                repellat quis consequatur ducimus quam nisi exercitationem omnis earum qui.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="https://i.ibb.co/T1Zdk83/Geraldo.jpg" alt="Person on a tour" class="story__img">
+                            <figcaption class="story__caption">Geraldo Tadeu dos Santos</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">Os cursos me ajudaram muito!</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
+                                ducimus quam nisi exercitationem omnis earum qui. Aperiam, ipsum sapiente aspernatur libero
+                                repellat quis consequatur ducimus quam nisi exercitationem omnis earum qui.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="u-center-text u-margin-top-small u-margin-bottom-big">
+                    <a href="#" class="btn-text">Leia todos os reviews &rarr;</a>
+                </div>
+            </section>
+
+        </main>
+
+        <footer class="footer">
+            <div class="footer__final">
+                <div class="footer__img">
+                    <img src="https://i.ibb.co/Y8R06XW/Logo-2-2.png" alt="Logo" class="footer__logo">
+                </div>
+                <div class="footer__navigation">
+                    <ul class="footer__list">
+                        <li class="footer__item"><a href="#" class="footer__link">Compania</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Contato</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Politica da empresa</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Termos e condições</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+    </body>
+</html>
