--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,6 +7,13 @@
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.logo {
+  height: 80px;
+  width: 200px;
+
+  &__img {
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+  }
 }
